<resources>
    <string name="app_name">GuardaLibros</string>

    <string-array name="categorias">
        <item>Fantasía</item>
        <item>Drama</item>
        <item>Ciencia Ficción</item>
        <item>Otro</item>
    </string-array>

    <string-array name="idiomas">
        <item>Español</item>
        <item>Inglés</item>
        <item>Alemán</item>
        <item>Esperanto</item>
    </string-array>

    <string-array name="formatos">
        <item>Libro</item>
        <item>PDF</item>
        <item>Epub</item>
        <item>Otro</item>
    </string-array>

    <string name="MENÚ">MENÚ</string>
    <string name="titulo">Título del Libro</string>
    <string name="imagen">Imagen</string>
    <string name="autor">Autor</string>
    <string name="alta">Alta</string>
    <string name="numero">Numero</string>
    <string name="nombre">Nombre</string>
    <string name="aceptar">Aceptar</string>
    <string name="bandera">🏁</string>
    <string name="formato">Formato</string>
    <string name="fecha">Fecha</string>
    <string name="finalizado">Finalizado</string>
    <string name="notas">Notas</string>
    <string name="prestado">Prestado</string>
    <string name="hora">Hora</string>

    <string name="alta_libro">Alta libro</string>
    <string name="acerca_de">Acerca de…</string>
    <string name="exportar_datos">Exportar datos</string>
    <string name="importar_datos">Importar Datos</string>
    <string name="cancelar">Cancelar</string>
    <string name="ordenar_por">Ordenar por</string>
</resources>