<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="78dp"
        android:layout_height="70dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/libro" />


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:maxLines="2"
        android:text="@string/titulo"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="wrap" />

    <TextView
        android:id="@+id/tvEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/autor"
        android:textColor="#2C2C2C"
        app:layout_constraintEnd_toEndOf="@+id/tvTitulo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTitulo"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />


    <TextView
        android:id="@+id/tvBandera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bandera"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvTitulo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFormato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/formato"
        app:layout_constraintBottom_toBottomOf="@+id/tvEdad"
        app:layout_constraintEnd_toEndOf="@+id/tvFecha"
        app:layout_constraintTop_toBottomOf="@+id/tvFecha" />

    <RatingBar
        android:id="@+id/rbEstrellas"
        style="@android:style/Widget.Material.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:contextClickable="false"
        android:isIndicator="true"
        android:padding="0dp"
        android:rating="2.5"
        android:stepSize="1"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="top"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:contextClickable="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvTitulo"
        app:layout_constraintTop_toBottomOf="@+id/tvEdad">

        <CheckBox
            android:id="@+id/checkBoxNotas"
            style="@android:style/Widget.Material.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:contextClickable="false"
            android:text="@string/notas"
            android:textSize="10sp"
            tools:layout_editor_absoluteX="79dp" />

        <CheckBox
            android:id="@+id/checkBoxFinalizado"
            style="@android:style/Widget.Material.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:contextClickable="false"
            android:text="@string/finalizado"
            android:textSize="10sp" />

        <CheckBox
            android:id="@+id/checkBoxPrestado"
            style="@android:style/Widget.Material.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:contextClickable="false"
            android:text="@string/prestado"
            android:textSize="10sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>